# wunschliste

./: .dockerignore  Dockerfile  Pipfile  fly.toml  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile
.github/: renovate.json
.github/workflows/: fly-review.yml  fly.yml  image.yml
client/: App.vue  router.js
client/components/: Logo.vue
client/partials/: SearchInput.vue
client/views/: Note.vue
docs/: DEVELOPMENT.md  advanced_searching.md  config.md  faq.md  image_support.md  shortcuts.md
server/: main.py
server/attachments/file_system/: file_system.py
server/notes/file_system/: file_system.py
