[project]
name = "wunschliste"
version = "0.0.0"
description = "A fork of flatnotes modified to be used as wishlist for our family"
requires-python = "==3.12.*"
dependencies = [ "whoosh==2.7.4", "fastapi==0.115.6", "uvicorn[standard]==0.32.1", "aiofiles==24.1.0", "python-jose[cryptography]==3.3.0", "pyotp==2.9.0", "qrcode==8.0", "python-multipart==0.0.19",]

[tool.uv]
dev-dependencies = [ "black", "flake8", "rope", "isort",]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
wunschliste = "main:main"