[project]
name = "wunschliste"
version = "0.0.0"
description = "A fork of flatnotes modified to be used as wishlist for our family"
requires-python = "==3.12.*"
dependencies = [ "whoosh==2.7.4", "fastapi==0.115.8", "uvicorn[standard]==0.34.0", "aiofiles==24.1.0", "python-jose[cryptography]==3.4.0", "pyotp==2.9.0", "qrcode==8.0", "python-multipart==0.0.20",]

[tool.uv]
dev-dependencies = [ "black", "flake8", "rope", "isort",]
